--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                 <span class="stat-value warning" id="outOfStockCount"></span>
             </div>
         </div>
+        <div class="navbar-actions">
+            <button class="btn btn-primary btn-sm" href="#card">Manage Product</button>
+        </div>
     </nav>
 
     <main class="container">
