--- a/index.html
+++ b/index.html
@@ -3,148 +3,128 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inventory Management System</title>
-    <link rel="stylesheet" href="bootstrap.css">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <title>Inventory Management - Login</title>
+    <link rel="stylesheet" href="login-style.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
-    <nav class="navbar">
-        <div class="navbar-brand">
-            <i class="fa-solid fa-boxes-stacked"></i>
-            <span>Inventory Manager</span>
-        </div>
-        <div class="navbar-stats">
-            <div class="stat-item">
-                <span class="stat-label">Products</span>
-                <span class="stat-value" id="productsCount"></span>
-            </div>
-            <div class="stat-item">
-                <span class="stat-label">Low Stock</span>
-                <span class="stat-value warning" id="lowStockCount"></span>
-            </div>
-            <div class="stat-item">
-                <span class="stat-label">Out</span>
-                <span class="stat-value warning" id="outOfStockCount"></span>
-            </div>
-        </div>
-        <div class="navbar-actions">
-            <button class="btn btn-primary btn-sm" href="#card">Manage Product</button>
-        </div>
-    </nav>
-
-    <main class="container">
-        <section class="card">
-            <div class="card-header">
-                <h2>
-                    <i class="fa-solid fa-cart-flatbed"></i>
-                    Load Products
-                </h2>
-            </div>
-            <div class="card-body">
-                <p class="section-lead">Search, filter, and load your latest stock with a quick glance at availability.</p>
-                <div class="search-filter-container">
-                    <div class="search-box">
-                        <i class="fa-solid fa-magnifying-glass"></i>
-                        <input type="text" class="form-control" placeholder="Search products, SKU, or supplier">
-                    </div>
-                    <div class="filter-box">
-                        <select class="form-control">
-                            <option>All Categories</option>
-                            <option>Electronics</option>
-                            <option>beauty</option>
-                            <option>Groceries</option>
-                            <option>fragrances</option>
-                            <option>furniture</option>
-                        </select>
-                    </div>
-                    <button class="btn btn-primary btn-sm">
-                        <i class="fa-solid fa-cloud-arrow-down"></i>
-                        Load Inventory
-                    </button>
+    <div class="login-container">
+        <!-- Left Side - Branding -->
+        <div class="login-left">
+            <div class="brand-content">
+                <div class="logo-section">
+                    <i class="fas fa-boxes"></i>
+                    <h1>InventoryHub</h1>
                 </div>
-
-                <div class="product-grid" id="load-products">
-                    
-
-                   
+                <h2>Welcome Back</h2>
+                <p>Manage your inventory efficiently and effectively</p>
+                <div class="features">
+                    <div class="feature">
+                        <i class="fas fa-check-circle"></i>
+                        <span>Real-time Tracking</span>
+                    </div>
+                    <div class="feature">
+                        <i class="fas fa-check-circle"></i>
+                        <span>Analytics & Reports</span>
+                    </div>
+                    <div class="feature">
+                        <i class="fas fa-check-circle"></i>
+                        <span>Secure Management</span>
+                    </div>
                 </div>
             </div>
-        </section>
+        </div>
 
-        <section class="card">
-            <div class="card-header">
-                <h2>
-                    <i class="fa-solid fa-pen-to-square"></i>
-                    Add / Edit Details
-                </h2>
-            </div>
-            <div class="card-body">
-                <p class="section-lead">Keep products tidy by updating key fields, suppliers, and imagery in one pass.</p>
-                <div class="form-row">
+        <!-- Right Side - Login Form -->
+        <div class="login-right">
+            <div class="form-container">
+                <div class="form-header">
+                    <h2>Sign In</h2>
+                    <p>Enter your credentials to continue</p>
+                </div>
+
+                <div id="loginForm" class="login-form">
+                    <!-- Email Input -->
                     <div class="form-group">
-                        <label><i class="fa-solid fa-barcode"></i> Product Name</label>
-                        <input type="text" class="form-control" placeholder="Wireless Headphones" id="name">
+                        <label for="email">Email Address</label>
+                        <div class="input-wrapper">
+                            <i class="fas fa-envelope"></i>
+                            <input 
+                                type="email" 
+                                id="email" 
+                                name="email" 
+                                placeholder="Enter your email"
+                                required
+                            >
+                        </div>
                     </div>
+
+                    <!-- Password Input -->
                     <div class="form-group">
-                        <label><i class="fa-solid fa-layer-group"></i> Category</label>
-                        <select class="form-control" id="category">
-                             <option>All Categories</option>
-                            <option>Electronics</option>
-                            <option>beauty</option>
-                            <option>Groceries</option>
-                            <option>fragrances</option>
-                            <option>furniture</option>
-                        </select>
+                        <label for="password">Password</label>
+                        <div class="input-wrapper">
+                            <i class="fas fa-lock"></i>
+                            <input 
+                                type="password" 
+                                id="password" 
+                                name="password" 
+                                placeholder="Enter your password"
+                                required
+                            >
+                        </div>
                     </div>
-                    <div class="form-group">
-                        <label><i class="fa-solid fa-hashtag"></i> ID</label>
-                        <input type="text" class="form-control" placeholder="921" id="id">
+
+                    <!-- Remember Me & Forgot Password -->
+                    <div class="form-options">
+                        <label class="remember-me">
+                            <input type="checkbox" name="remember">
+                            <span>Remember me</span>
+                        </label>
+                        <a href="#" class="forgot-password">Forgot Password?</a>
                     </div>
-                    <div class="form-group">
-                        <label><i class="fa-solid fa-dollar-sign"></i> Unit Price</label>
-                        <input type="number" class="form-control" placeholder="129.00" id="price">
+
+                    <!-- Sign In Button -->
+                    <button type="submit" class="btn-signin" onclick="btnLogin()">
+                        <span>Sign In</span>
+                        <i class="fas fa-arrow-right">
+                    </button></a>
+
+                    <!-- Divider -->
+                    <div class="divider">
+                        <span>Or continue with</span>
                     </div>
-                    <div class="form-group">
-                        <label><i class="fa-solid fa-boxes-stacked"></i> Stock</label>
-                        <input type="number" class="form-control" placeholder="52" id="stock">
-                    </div>
-                    <div class="form-group">
-                        <label><i class="fa-solid fa-image"></i> Image URL</label>
-                        <input type="file" class="form-control" placeholder="https://images.unsplash.com/..." id="imageUrl">
+
+                    <!-- Social Login -->
+                    <div class="social-login">
+                        <button type="button" class="social-btn google">
+                            <i class="fab fa-google"></i>
+                        </button>
+                        <button type="button" class="social-btn microsoft">
+                            <i class="fab fa-windows"></i>
+                        </button>
+                        <button type="button" class="social-btn github">
+                            <i class="fab fa-github"></i>
+                        </button>
                     </div>
                 </div>
-                <div class="form-actions">
-                    <button class="btn btn-primary" onclick="addProduct();">
-                        <i class="fa-solid fa-floppy-disk"></i>
-                        Save Product
-                    </button>
-                    <button class="btn btn-success">
-                        <i class="fa-solid fa-arrows-rotate"></i>
-                        Update Existing
-                    </button>
-                    <button class="btn btn-danger">
-                        <i class="fa-solid fa-eraser"></i>
-                        Clear Form
-                    </button>
-                </div>
-            </div>
-        </section>
-    </main>
 
-    <footer class="footer">
-        <div class="container footer-grid">
-            <div>
-                <h4>Inventory Management</h4>
-                <p class="muted">Track products, balance stock, and keep suppliers in sync.</p>
-            </div>
-            <div class="footer-actions">
-                <button class="btn btn-secondary btn-sm"><i class="fa-solid fa-print"></i> Print Report</button>
-                <button class="btn btn-primary btn-sm"><i class="fa-solid fa-file-arrow-down"></i> Export CSV</button>
+                <!-- Sign Up Link -->
+                <div class="signup-link">
+                    <p>Don't have an account? <a href="#">Create one now</a></p>
+                </div>
+
+                <!-- Footer -->
+                <div class="login-footer">
+                    <a href="#">Terms of Service</a>
+                    <span class="divider-dot">•</span>
+                    <a href="#">Privacy Policy</a>
+                </div>
             </div>
         </div>
-    </footer>
+    </div>
 
-    <script src="script.js"></script>
+    <script src="login.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 </body>
 </html>
