--- a/dashbord.html
+++ b/dashbord.html
@@ -131,6 +131,12 @@
             </div>
         </section>
     </main>
+    <div style="width: 80%; margin: auto; height: 400px; width: 900px;">
+        <h1>Stock Status
+
+        </h1>
+         <canvas id="inventoryChart"></canvas>
+    </div>
 
     <footer class="footer">
         <div class="container footer-grid">
@@ -146,5 +152,6 @@
 
     <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </body>
 </html>
