--- a/dashboard.html
+++ b/dashboard.html
@@ -72,11 +72,11 @@
             </div>
         </section>
 
-        <section class="card">
+        <section class="card" id="formArea">
             <div class="card-header">
                 <h2>
                     <i class="fa-solid fa-pen-to-square"></i>
-                    Add / Edit Details
+                    Add  Details
                 </h2>
             </div>
             <div class="card-body">
@@ -119,7 +119,7 @@
                         <i class="fa-solid fa-floppy-disk"></i>
                         Save Product
                     </button>
-                    <button class="btn btn-success">
+                    <button class="btn btn-success" onclick="updateProduct();">
                         <i class="fa-solid fa-arrows-rotate"></i>
                         Update Existing
                     </button>
