--- a/dashboard.html
+++ b/dashboard.html
@@ -48,8 +48,8 @@
                         <i class="fa-solid fa-magnifying-glass"></i>
                         <input type="text" class="form-control" placeholder="Search products, SKU, or supplier">
                     </div>
-                    <div class="filter-box">
-                        <select class="form-control">
+                    <div class="filter-box" >
+                        <select class="form-control" id="searchCategory">
                             <option>All Categories</option>
                             <option>Electronics</option>
                             <option>beauty</option>
@@ -58,7 +58,7 @@
                             <option>furniture</option>
                         </select>
                     </div>
-                    <button class="btn btn-primary btn-sm">
+                    <button class="btn btn-primary btn-sm" onclick="search();">
                         <i class="fa-solid fa-cloud-arrow-down"></i>
                         Load Inventory
                     </button>
